# rep_DZ_BasicWeb

./: data.json  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base.html  contacts.html  home.html
catalog/templates/catalog/includes/: inc_catalog_menu_bottom.html  inc_catalog_menu_top.html
catalog/templatetags/: mediapath.py
config/: settings.py
homework_19.1/: list.json  main.py
