[tool.poetry]
name = "dz-basicweb"
version = "0.1.0"
description = ""
authors = ["tychkov.vv <tyvl@yandex.ru>"]
readme = "README.md"
packages = [{include = "dz_basicweb"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
ipython = "^8.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
